--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Paulo Cardoso
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Software Advantures
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/2170585?s=400&u=4aecbcc29f7bc64606198d2a0604ce1bcf81ab30&v=4
 
 #
 # Flags below are optional
@@ -21,8 +21,8 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
+  github: paulocardoso
+  instagram: paulocrdoso
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
