--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Paulo Cardoso
 
 # Short bio or description (displayed in the header)
-description: Software Advantures
+description: Software Adventures
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/2170585?s=400&u=4aecbcc29f7bc64606198d2a0604ce1bcf81ab30&v=4
