--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Paulo Cardoso
 description: Crafting Business Digital Transformation
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars1.githubusercontent.com/u/2170585?s=400&u=4aecbcc29f7bc64606198d2a0604ce1bcf81ab30&v=4
+avatar: https://avatars2.githubusercontent.com/u/56151773?s=460&v=4
 
 #
 # Flags below are optional
